# flood-tuber

./: .gitignore  CMakeLists.txt  README.md  README.tr.md  apng-decoder.cpp  apng-decoder.h  buildspec.json  flood-tuber-lipsync.cpp  flood-tuber-lipsync.h  flood-tuber-props.cpp  flood-tuber-props.h  flood-tuber.cpp  flood-tuber.h  ovr-loader.cpp  ovr-loader.h  webp-decoder.cpp  webp-decoder.h
.github/: FUNDING.yml
.github/scripts/: .Aptfile  build-linux  package-macos~HEAD
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build.yml  push.yaml
cmake/common/: buildspec_common.cmake
cmake/macos/: compilerconfig.cmake
cmake/windows/: buildspec.cmake
data/avatars/Flood Tuber Avatar/: settings.ini
data/avatars/Gamer Robot/: settings.ini
data/avatars/Streamer Boy/: settings.ini
data/avatars/Streamer Girl/: settings.ini
data/avatars/The Neon Oni/: settings.ini
data/avatars/The Outlaw/: settings.ini
data/avatars/The Retro TV/: settings.ini
data/locale/: en-US.ini  tr-TR.ini
